--- a/src/i_themes/_default.scss
+++ b/src/i_themes/_default.scss
@@ -7,7 +7,7 @@ _________________________________________*/
 @import 'default/extras.scss' ;
 @import 'default/navbars.scss' ;
 @import 'default/forms.scss' ;
-@import 'default/customs_blocks.scss' ;
+@import 'default/collections.scss' ;
 
 
 
