--- a/src/i_themes/default/forms/_i_form.scss
+++ b/src/i_themes/default/forms/_i_form.scss
@@ -11,7 +11,7 @@ _______________________________________________________________________*/
 
         span:first-of-type {
 
-            border: 1px solid $dark-color ;
+            border: 1px solid $border-color ;
             padding: 0.3em ;
             margin-left: 0.1em ;
         }
