--- a/src/i_themes/default/navbars/_b_fixed.scss
+++ b/src/i_themes/default/navbars/_b_fixed.scss
@@ -10,7 +10,7 @@ ________________________________________________________________________________
     left: 0px ;
     width: 100% ;
     border: none ;
-    border-top: 1px solid $dark-color ;
+    border-top: 1px solid $border-color ;
     z-index: $global-z-index ;
 
     >ul li >ul {
