--- a/iui.css
+++ b/iui.css
@@ -431,9 +431,9 @@ input[type="radio"]:before {
 input[type="checkbox"]:after,
 input[type="radio"]:after {
   content: '✔';
-  position: absolute;
+  position: relative;
   top: 0;
-  left: 0.2em;
+  left: 0.25em;
   font-size: 0, 85em;
   color: #fff;
   visibility: hidden;
