--- a/src/_i_base.scss
+++ b/src/_i_base.scss
@@ -281,8 +281,9 @@ input[ type="radio"] {
     &:after {
 
         content: '✔';
-        position: absolute;
-        top: 0; left: 0.2em;
+        position: relative;
+        top: 0; 
+        left: 0.25em;
         font-size: 0,85em ;
         color: $white-color ;
         visibility: hidden ;
