--- a/src/i_themes/_default.scss
+++ b/src/i_themes/_default.scss
@@ -8,6 +8,7 @@ _________________________________________*/
 @import 'default/navbars.scss' ;
 @import 'default/forms.scss' ;
 @import 'default/collections.scss' ;
+@import 'default/tables.scss' ;
 
 
 
