--- a/src/_i_base.scss
+++ b/src/_i_base.scss
@@ -51,6 +51,11 @@ table {
         padding: 0.5em ;
         border: 1px solid lighten( $border-color, 50%) ;
     }
+    
+    tr {
+        
+        border: none ;
+    }
 
     th {
 
