--- a/src/i_themes/default/_grids.scss
+++ b/src/i_themes/default/_grids.scss
@@ -6,13 +6,13 @@
 * Beside IUI provide it own "grid using syntax", toast syntax is also compatible (just look at associated docs).
 *
 * Here is the style definition of "IUI's grid syntax"
+* @NOTE if iui-toast modifications are not merge to the toast branch; then iui will stop using the library and will implement it own way.
 */
 
 $toast-grid-namespace: "i-grid" ;
 $toast-grid-column-namespace: "grid" ;
+$toast-gutter-width: 0.3em ;
 
-$toast-breakpoint-medium: 700px ;
-$toast-breakpoint-small: 480px ;
 
 @import '../../../bower_components/toast/scss/grid.scss' ;
 
@@ -46,48 +46,6 @@ $toast-breakpoint-small: 480px ;
     }
 }
 
-// For each of our toast breaking point column size groups...
-@each $group in (2, 3, 4) { //@TODO set group up to 12 or higher when toast will support it.
-
-    // For each column width from 1 to the column group...
-    @for $i from 1 through ($group - 1) {
-
-        .col-#{$i}-of-#{$group}.medium {
-
-            @extend .#{$toast-grid-column-namespace}.#{$toast-grid-column-namespace}--m-#{$i}-of-#{$group} ;
-        }
-    }
-}
-
-// For each of our toast breaking point column size groups...
-@each $group in (2, 3, 4) { //@TODO set group up to 12 or higher when toast will support it.
-
-    // For each column width from 1 to the column group...
-    @for $i from 1 through ($group - 1) {
-
-        .col-#{$i}-of-#{$group}.small {
-
-            @extend .#{$toast-grid-column-namespace}.#{$toast-grid-column-namespace}--s-#{$i}-of-#{$group} ;
-        }
-    }
-}
-
-@media (max-width: $toast-breakpoint-medium) and (min-width: $toast-breakpoint-small) {
-    
-    .#{$toast-grid-column-namespace}[class*="medium"] {
-        
-        display: inline-block;
-        margin-right: -.24em;
-    }
-}
-@media (max-width: $toast-breakpoint-small) {
-    
-    .#{$toast-grid-column-namespace}[class*="small"] {
-        
-        display: inline-block;
-        margin-right: -.24em;
-    }
-}
 
 // Centers the column in the grid and clears the row of all other columns
 .#{$toast-grid-column-namespace}.centered {
